[gd_scene load_steps=4 format=3 uid="uid://bw6m22wm82puc"]

[ext_resource type="Texture2D" uid="uid://dvstg4w3iedns" path="res://Assets/quest_list_background.png" id="1_fu0gu"]
[ext_resource type="Script" uid="uid://tvexu7ggjirg" path="res://Scripts/InteractionScreen.gd" id="1_kyepu"]

[sub_resource type="SystemFont" id="SystemFont_cn68s"]

[node name="InteractionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kyepu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fu0gu")
expand_mode = 4

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 204
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="VerticalLayout" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="QuestTitleLabel" type="Label" parent="MainMargin/VerticalLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.450571, 0.290707, 0.0228394, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_fonts/font = SubResource("SystemFont_cn68s")
theme_override_font_sizes/font_size = 59
text = "Available Quests"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="QuestTopicLabel" type="Label" parent="MainMargin/VerticalLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMargin/VerticalLayout"]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="MainMargin/VerticalLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "\"Select a character:\""
horizontal_alignment = 1

[node name="NpcScroll" type="ScrollContainer" parent="MainMargin/VerticalLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="NpcListContainer" type="VBoxContainer" parent="MainMargin/VerticalLayout/NpcScroll"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50
